# ai-trading-bot

./: daily_summaries.txt  forecast_log.txt  forecast_script.py  main.py  pyproject.toml  requirements.txt  run_bot+script.py  signal_log.csv  summary_script.py  top_pick_script.py  top_picks.txt  trend_reports.txt  trend_script.py
.github/workflows/: daily-pipeline.yml  forecast.yml  run-bot.yml  summary.yml  top-pick.yml  trend.yml
