[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0.11",
    "flask>=3.1.1",
    "openai>=1.79.0",
    "pandas>=2.2.3",
    "pytz>=2025.2",
    "requests>=2.32.3",
    "ta>=0.11.0",
    "yfinance>=0.2.61",
]
